# agile_upgrade

./: .gitignore  ChangeLog.md  README.md  SConscript  agile_upgrade_conf_template.h
.github/workflows/: action.yml  action_example.yml  rtt_pkg_test.yml
adapter/: agile_upgrade_file.c
example/: CMakeLists.txt  Makefile  README.md  common.h.in
example/fastlz-1.0.1/: CMakeLists.txt  README.md
example/inc/: common.h
example/quicklz-1.0.1/: CMakeLists.txt
example/src/: test.c
example/tinycrypt-1.1.0/: CMakeLists.txt
example/tools/: app.rbl
inc/: agile_upgrade.h  agile_upgrade_def.h
porting/: agile_upgrade_conf_template.h
src/: agile_upgrade.c  agile_upgrade_crc.c
